CORS all HTTP verbs, application/logs
